# os-considerais-bot

./: .gitignore  README.md  bot.py  handler.py  package-lock.json  package.json  pyproject.toml  serverless.yml  word_filter.py
raw/: filtered_words.txt  singular_words.txt  words.txt
utils/: create_singulars.py  set_webhook.py  word_filter.py
